// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert UI snapshots renders a default alert 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-6 {
  border: none;
  text-align: left;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 0;
  width: 327px;
  border-radius: 0.5rem;
  opacity: 1;
  -webkit-animation: animation-0 350ms 1;
  animation: animation-0 350ms 1;
  -webkit-transition: 350ms;
  transition: 350ms;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  background-color: #332e54;
  box-shadow: 0px 8px 24px rgba(51,46,84,0.05);
}

@media (min-width:768px) {
  .emotion-6 {
    -webkit-animation: animation-1 350ms 1;
    animation: animation-1 350ms 1;
    margin: 0 auto 1rem;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #ffffff;
  font-size: 0.875rem;
  padding: 1rem;
}

.emotion-0 svg {
  height: 1rem;
  width: 1rem;
  fill: #ffffff;
}

.emotion-2 {
  margin: -3px 0 0 1rem;
  max-height: none;
}

<button
  className="emotion-6 emotion-7"
  onClick={[Function]}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
    >
      <svg
        fill="#ffffff"
      />
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      Your email address was updated successfully!
    </div>
  </div>
</button>
`;

exports[`Alert UI snapshots renders a sticky alert 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-6 {
  border: none;
  text-align: left;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 0;
  width: 327px;
  border-radius: 0.5rem;
  opacity: 1;
  -webkit-animation: animation-0 350ms 1;
  animation: animation-0 350ms 1;
  -webkit-transition: 350ms;
  transition: 350ms;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  background-color: #332e54;
  box-shadow: 0px 8px 24px rgba(51,46,84,0.05);
}

@media (min-width:768px) {
  .emotion-6 {
    -webkit-animation: animation-1 350ms 1;
    animation: animation-1 350ms 1;
    margin: 0 auto 1rem;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #ffffff;
  font-size: 0.875rem;
  padding: 1rem;
}

.emotion-0 svg {
  height: 1rem;
  width: 1rem;
  fill: #ffffff;
}

.emotion-2 {
  margin: -3px 0 0 1rem;
  max-height: none;
}

<button
  className="emotion-6 emotion-7"
  onClick={[Function]}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
    >
      <svg
        fill="#ffffff"
      />
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      Your email address was updated successfully!
    </div>
  </div>
</button>
`;

exports[`Alert UI snapshots renders custom component passed in content prop 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-6 {
  border: none;
  text-align: left;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 0;
  width: 327px;
  border-radius: 0.5rem;
  opacity: 1;
  -webkit-animation: animation-0 350ms 1;
  animation: animation-0 350ms 1;
  -webkit-transition: 350ms;
  transition: 350ms;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  background-color: #332e54;
  box-shadow: 0px 8px 24px rgba(51,46,84,0.05);
}

@media (min-width:768px) {
  .emotion-6 {
    -webkit-animation: animation-1 350ms 1;
    animation: animation-1 350ms 1;
    margin: 0 auto 1rem;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #ffffff;
  font-size: 0.875rem;
  padding: 1rem;
}

.emotion-0 svg {
  height: 1rem;
  width: 1rem;
  fill: #ffffff;
}

.emotion-2 {
  margin: -3px 0 0 1rem;
  max-height: none;
}

<button
  className="emotion-6 emotion-7"
  onClick={[Function]}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
    >
      <svg
        fill="#ffffff"
      />
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <div>
        <strong>
          Your info is updated!
        </strong>
         
        <a
          href="curology.com"
        >
           Click here to see changes
        </a>
      </div>
    </div>
  </div>
</button>
`;

exports[`Alert UI snapshots renders error alert 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #ffffff;
  font-size: 0.875rem;
  padding: 1rem;
}

.emotion-0 svg {
  height: 1rem;
  width: 1rem;
  fill: #ffffff;
}

.emotion-2 {
  margin: -3px 0 0 1rem;
  max-height: none;
}

.emotion-6 {
  border: none;
  text-align: left;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 0;
  width: 327px;
  border-radius: 0.5rem;
  opacity: 1;
  -webkit-animation: animation-0 350ms 1;
  animation: animation-0 350ms 1;
  -webkit-transition: 350ms;
  transition: 350ms;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  background-color: #BD200F;
  box-shadow: 0px 8px 24px rgba(189,32,15,0.05);
}

@media (min-width:768px) {
  .emotion-6 {
    -webkit-animation: animation-1 350ms 1;
    animation: animation-1 350ms 1;
    margin: 0 auto 1rem;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

<button
  className="emotion-6 emotion-7"
  onClick={[Function]}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
    >
      <svg
        fill="#ffffff"
      />
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      Your email address was updated successfully!
    </div>
  </div>
</button>
`;

exports[`Alert UI snapshots renders success alert 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #ffffff;
  font-size: 0.875rem;
  padding: 1rem;
}

.emotion-0 svg {
  height: 1rem;
  width: 1rem;
  fill: #ffffff;
}

.emotion-2 {
  margin: -3px 0 0 1rem;
  max-height: none;
}

.emotion-6 {
  border: none;
  text-align: left;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 0;
  width: 327px;
  border-radius: 0.5rem;
  opacity: 1;
  -webkit-animation: animation-0 350ms 1;
  animation: animation-0 350ms 1;
  -webkit-transition: 350ms;
  transition: 350ms;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  background-color: #2B6E33;
  box-shadow: 0px 8px 24px rgba(43,110,51,0.05);
}

@media (min-width:768px) {
  .emotion-6 {
    -webkit-animation: animation-1 350ms 1;
    animation: animation-1 350ms 1;
    margin: 0 auto 1rem;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

<button
  className="emotion-6 emotion-7"
  onClick={[Function]}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
    >
      <svg
        fill="#ffffff"
      />
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      Your email address was updated successfully!
    </div>
  </div>
</button>
`;
